@@ -25,6 +25,7 @@ java {
 tasks {
     withType<JavaCompile> {
         options.compilerArgs.add("--enable-preview")
+        options.forkOptions.jvmArgs!!.add("--enable-preview")
     }
     withType<Test>() {
         jvmArgs("--enable-preview")
